fix(css/main): fix dropdown showing behind embed

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -85,6 +85,7 @@ body {
 
         &:hover > ul {
           display: inherit;
+          z-index: 1;
         }
       }
 
